overflow fix

--- a/style.css
+++ b/style.css
@@ -56,14 +56,15 @@ h6 {
 html,
 body {
     height: 100%;
-}
-
-body {
+  }
+  
+  body {
     font-family: 'Raleway', sans-serif;
     font-size: 16px;
     line-height: 1.5em;
     font-weight: 400;
     color: #494949;
+    overflow-x: hidden !important;
 }
 
 a {
